Use selenium for IT requiring browser in files package